<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.ayoza</groupId>
  <artifactId>feline-tracker</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>
  
  <parent>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-starter-parent</artifactId>
	  <version>2.0.5.RELEASE</version>
      <relativePath/>
  </parent>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>10</maven.compiler.source>
    <maven.compiler.target>10</maven.compiler.target>
    <feline.tracker.api.version>1.0</feline.tracker.api.version>
    <spring.security.oauth2.version>2.3.3.RELEASE</spring.security.oauth2.version>
    <elasticsearch.rest.high.level.client.version>6.1.1</elasticsearch.rest.high.level.client.version>
    <jaxb.version>2.3.0</jaxb.version>
    <javax.activaction.version>1.1.1</javax.activaction.version>
    <commons.lang.version>2.6</commons.lang.version>
    <junit.params.version>1.1.1</junit.params.version>
    <spring.cloud.version>Finchley.SR1</spring.cloud.version>
    <lombok.version>edge-SNAPSHOT</lombok.version>
  </properties>
  
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-cache</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <scope>compile</scope>
      <exclusions>
        <exclusion>
          <artifactId>tomcat-annotations-api</artifactId>
          <groupId>org.apache.tomcat</groupId>
        </exclusion>
        <exclusion>
          <artifactId>spring-boot-starter-tomcat</artifactId>
          <groupId>*</groupId>
        </exclusion>
      </exclusions>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jetty</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-starter-oauth2</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-starter-config</artifactId>
    </dependency>
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-redis</artifactId>
    </dependency>
    
    <dependency>
      <groupId>com.ayoza.feline-tracker-lib</groupId>
      <artifactId>feline-tracker-api</artifactId>
      <version>${feline.tracker.api.version}</version>
    </dependency>
    
	<dependency>
      <groupId>org.springframework.security.oauth</groupId>
      <artifactId>spring-security-oauth2</artifactId>
      <version>${spring.security.oauth2.version}</version>
	</dependency>    
    
    <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version><!--$NO-MVN-MAN-VER$-->
        <scope>provided</scope>
    </dependency>    
    
    <dependency>
      <groupId>net.java.dev.jna</groupId>
      <artifactId>jna</artifactId>
      <scope>runtime</scope>
    </dependency>
    
    <dependency>
      <groupId>org.elasticsearch</groupId>
      <artifactId>elasticsearch</artifactId>
      <scope>runtime</scope>
    </dependency>
    
    <dependency>
      <groupId>org.elasticsearch.client</groupId>
      <artifactId>elasticsearch-rest-high-level-client</artifactId>
      <version>${elasticsearch.rest.high.level.client.version}</version>
      <scope>runtime</scope>
    </dependency>
    
    <dependency>
      <groupId>com.ayoza.feline-tracker-lib</groupId>
      <artifactId>feline-tracker-core</artifactId>
      <version>${feline.tracker.api.version}</version>
      <scope>runtime</scope>
    </dependency>
    
	<dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
    </dependency>
    
	<dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-core</artifactId>
      <version>${jaxb.version}</version>
	</dependency>      
      
	<dependency>
      <groupId>com.sun.xml.bind</groupId>
      <artifactId>jaxb-impl</artifactId>
      <version>${jaxb.version}</version>
	</dependency>
	
	<dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>${javax.activaction.version}</version>
	</dependency>
	
	<dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>${commons.lang.version}</version>
	</dependency>	   	
    
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>pl.pragmatists</groupId>
      <artifactId>JUnitParams</artifactId>
      <version>${junit.params.version}</version>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring.cloud.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>   
    </dependencies>
  </dependencyManagement>
  
  <build>
      <finalName>feline-tracker</finalName>
      
	  <plugins>
		<plugin>
			<groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-maven-plugin</artifactId>
		</plugin>
		
		<plugin>
		  <groupId>io.fabric8</groupId>
		  <artifactId>docker-maven-plugin</artifactId>
		  <version>0.27.0</version>
		  <configuration>
		    <images>
		      <image>
		        <name>raultov/${project.build.finalName}</name>
		        <build>
		          <from>openjdk:10.0.2</from>
		          <entryPoint> java --illegal-access=deny -Dconfig.uri=http://config-server:8888 -Dspring.profiles.active=dev -jar /application/${project.build.finalName}.jar </entryPoint>
		          <assembly>
		            <basedir>/application</basedir>
		            <descriptorRef>artifact</descriptorRef>
		            <inline>
		              <id>assembly</id>
		              <files>
		                <file>
		                  <source>target/${project.build.finalName}.jar</source>
		                </file>
		              </files>
		            </inline>
		          </assembly>
		          <tags>
		            <tag>latest</tag>
		          </tags>
		          <ports>
		            <port>8080</port>
		          </ports>
		        </build>
		        <run>
		          <namingStrategy>alias</namingStrategy>
		        </run>
		        <alias>${project.build.finalName}</alias>
		      </image>
		    </images>
		  </configuration>
		</plugin>		
	  </plugins>
  </build>
  
  <repositories>
	<repository>
		<id>projectlombok.org</id>
		<url>https://projectlombok.org/edge-releases</url>
	</repository>
  </repositories>  
</project>
